# darknet

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  darknet-cpp  readStats.py
Serialization/: CMakeLists.txt  DetectionsSerialization.cpp  DetectionsSerialization.h  FStreamsSupport.cpp  FStreamsSupport.h  README.md  SerializationBase.h  SerializationFwd.h  SerializationIO.h  StrUtils.cpp  StrUtils.h  convertGroundTruth.cpp
Serialization/yaml-cpp/: CMakeLists.txt
cfg/: coco.data
src/: compareDetections.c  deconvolutional_layer.c  deconvolutional_layer.h  demo.c  demo.h  detectSequence.c  detector.c  detectorCommon.h  groundtruthStats.c  parser.c  softmax_layer.c  utils.c
